syntax = "proto3";

option go_package = "proto/user-experience-service";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

service UserExperienceService{
    rpc FindByUserId(FindByUserIdRequest) returns (UserExperience) {
        option(google.api.http) = {
            get: "/tourist/userExperience/{userId}"
        };
    }

    rpc AddXP(AddXPRequest) returns (UserExperience) {
        option(google.api.http) = {
            put: "/tourist/userExperience/addXp/{id}/{xp}"
            body: "*"
        };
    }

    rpc Create(UserExperience) returns (UserExperience) {
        option(google.api.http) = {
            post: "/tourist/userExperience"
            body: "*"
        };
    }

    rpc Delete(UserExperience) returns (DeleteUserExperienceResponse){
            option(google.api.http) = {
            delete: "/tourist/userExperience/{id}"
        };
    }

    rpc Update(UserExperience) returns (UserExperience){
            option(google.api.http) = {
            put: "/tourist/userExperience"
            body: "*"
        };
    }
}


message UserExperience {
    int32 id = 1;
    int32 userId = 2;
    int32 xp = 3;
    int32 level = 4;
}

message AddXPRequest {
    int32 id = 1;
    int32 xp = 2;
}

message FindByUserIdRequest {
    int32 userId = 1;
}

message DeleteUserExperienceResponse {
}
